[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiberlen"
version = "0.1.0"
description = "Fiber length analysis from microscopy images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "imageio>=2.31",
  "tifffile>=2023.7.10",
  "scikit-image>=0.21",
  "matplotlib>=3.7",
  "streamlit>=1.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fiberlen*"]
